portfolio about update

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
           <div class="text-container">
             <p>
-              Iam Akhil Sai Polisetty I did my 10th standard with 93% and I did 12th standard with 90% and I did Btech in Computer Sciencewith First class and I have strong foundation on Computer science subjects
+              Iam Akhil Sai Polisetty I did my 10th standard with 93% and I did 11th standard with 94% and (11th+12th) with 90% and I did Btech in Computer Sciencewith First class and I have strong foundation on Computer science subjects
               during my btech I got intrested towards Fullstack web development I graduated on 2022
               So In 2022 August I joined Scaler Academy to pursue Full Stack Development
               There I did 400 DSA problems in Java including all patterns
@@ -546,7 +546,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+     
     </footer>
     <script src="script.js"></script>
   </body>
