portfolio bio updated

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="text-container">
             <p>
               Iam Akhil Sai Polisetty I did my 10th standard with 93% and I did 11th standard with 94% and (11th+12th) with 90% and I did Btech in Computer Sciencewith First class and I have strong foundation on Computer science subjects
-              during my btech I got intrested towards Fullstack web development I graduated on 2022
+              during my btech I got interested towards Fullstack web development I graduated on 2022
               So In 2022 August I joined Scaler Academy to pursue Full Stack Development
               There I did 400 DSA problems in Java including all patterns
               and I learnt SQL,JavaScript,React and I did hands on projects on React Js 
